030-software/fluxcd/apps/atuin/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: atuin
  labels:
    namespace: atuin
