030-software/fluxcd/apps/atuin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: atuin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: atuin
