030-software/fluxcd/apps/atuin/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin
spec:
  hostnames:
  - atuin.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: atuin
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
